fix contact details contrast

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -353,7 +353,7 @@ footer {
 
 #contact_info h4{
     margin-top: 10px;
-    color: #E26310;
+    color: #af5417ef;
 }
 
 /* Form section */
